📄 設計ドキュメント追加: 画面設計書、状態遷移図、E2Eシナリオ集

--- a/docs/mvp/asyncapi.yaml
+++ b/docs/mvp/asyncapi.yaml
@@ -1178,6 +1178,7 @@ components:
           type: string
           enum:
             - ACTIVE
+            - SEATED_WAIT_NEXT_HAND
             - SIT_OUT
             - LEAVE_PENDING
         disconnectStreakResetTo:
