--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "dev": "pnpm -r --parallel dev",
     "build": "pnpm -r build",
+    "db:start": "bash ./scripts/db-start.sh",
+    "db:status": "supabase status",
+    "db:reset": "supabase db reset --local",
+    "db:stop": "supabase stop",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "typecheck": "pnpm -r typecheck",
