--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "pnpm -r --parallel dev",
     "build": "pnpm -r build",
+    "docs:api:build": "bash ./scripts/build-api-reference-site.sh ./site",
     "db:start": "bash ./scripts/db-start.sh",
     "db:status": "supabase status",
     "db:reset": "supabase db reset --local",
