chore: 契約リテラル再発防止を導入
- apps配下の契約リテラル直書きを検知するスクリプトを追加

- CI/PRテンプレート/運用ルールへチェックを組み込み

- FIXED_LIMIT等の期待値をshared定数参照へ統一

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,9 @@ jobs:
             - name: Lint
               run: pnpm lint
 
+            - name: Contract literals check
+              run: pnpm check:contract-literals
+
             - name: Typecheck
               run: pnpm typecheck
 
