--- a/apps/server/.env.local.example
+++ b/apps/server/.env.local.example
@@ -1,5 +1,10 @@
 GOOGLE_OAUTH_CLIENT_ID=your-google-oauth-client-id.apps.googleusercontent.com
+GOOGLE_OAUTH_CLIENT_SECRET=your-google-oauth-client-secret
 GOOGLE_OAUTH_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
 GOOGLE_OAUTH_SCOPE=openid email profile
 GOOGLE_OAUTH_AUTH_ENDPOINT=https://accounts.google.com/o/oauth2/v2/auth
+GOOGLE_OAUTH_TOKEN_ENDPOINT=https://oauth2.googleapis.com/token
+GOOGLE_OAUTH_USERINFO_ENDPOINT=https://openidconnect.googleapis.com/v1/userinfo
 WEB_CLIENT_ORIGIN=http://localhost:5173
+SUPABASE_URL=http://127.0.0.1:54321
+SUPABASE_SERVICE_ROLE_KEY=your-supabase-service-role-key
