--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "pnpm -r build",
     "docs:api:build": "bash ./scripts/build-api-reference-site.sh ./site",
     "db:start": "bash ./scripts/db-start.sh",
+    "db:start:api": "bash ./scripts/db-start-api.sh",
     "db:status": "supabase status",
     "db:reset": "supabase db reset --local",
     "db:stop": "supabase stop",
